fix(article3): align code with repo — configurable timeout, cached provider, at-least-once section