@@ -1,283 +1,162 @@
 # 延迟命令 × RocketMQ：当 Agent 说"5 分钟后关单"
 
-> agent 不只能"现在做"，还能"等一下再做"。但"等一下"要精确到毫秒、不丢、不重复、还得兜底——这比即时命令难一个数量级。
-
-> 全部代码开源：**https://github.com/wheningo/orderDemo**
-> 本篇是 Phase 2 延伸，承接前两篇。第一篇讲"聚合拒绝 agent"，第二篇讲"TCC 在并发下拒绝 agent"，这一篇讲"agent 获得时间维度的能力"。
+> 前两篇里 agent 提议"做什么"，由领域那道墙决定"能不能做"。 这一篇 agent 学会了提议"什么时候做"——而系统必须保证两件 agent 管不了的事：**到点一定有人执行**，以及**执行的那一刻，墙还在**。
+>
+> 这篇几乎不贴代码。完整可运行实现都在 GitHub，文章只讲架构怎么切、心法怎么用、坑怎么踩出来的。 代码：**https://github.com/wheningo/orderDemo**
 
 ---
 
-## 1. 问题：agent 只有"即时命令"够用吗？
+## 先给结论：一张责任划分表
 
-前两篇的 agent 只会"现在就做"：放量、预留库存、加权曝光。但真实业务有大量"等一下再做"的场景：
+"什么时候做"这件事，可以拆成三层。**只有最上面一层能交给 agent**，下面两层是系统和领域的责任——这张表是全文的脊柱，建议先存下来：
 
-- 下单后 30 分钟未付款 → 自动关单释放库存
-- 促销活动 → 定时开始/结束曝光加权
-- 预留超时 → 精确到单条预留的自动释放
+| 这件事 | 谁负责 | 为什么 |
+|--------|--------|--------|
+| **该不该延迟、延迟多久**（意图层） | ✅ 可交给 agent | 这是业务判断，agent 有上下文："这单风险低，5 分钟后再关" |
+| **到点了一定有人执行**（触发可靠性层） | ❌ 系统兜底 | agent 会下线、进程会重启、消息会丢——deadline 不能依赖任何"活着"的东西 |
+| **执行那一刻合不合法**（领域裁决层） | ❌ 领域兜底 | 迟到、重复、过期的触发撞上已变化的状态，必须被状态机挡回去 |
 
-这些不是 cron 能解决的——它们是**每条业务实例有自己独立的倒计时**。100 个订单有 100 个不同的超时时刻，不是"每分钟扫一次全表"能精确处理的。
+后两层就是这篇要解决的工程问题。一句话先记住：**agent 可以决定"5 分钟后关单"，但"这 5 分钟一定兑现"和"兑现时不误伤"，是系统的责任，不是 agent 的承诺。**
 
-## 2. 两条路：delayLevel vs 精确投递
+---
 
-RocketMQ 提供两种延迟能力：
+## 1. 一个被 cron 掩盖的问题：每条实例有自己的倒计时
 
-| | 4.x delayLevel | 5.x setDeliveryTimestamp |
+前两篇的 agent 只会"现在就做"：放量、预留库存、加权曝光。但真实业务里大量需求是"等一下再做"：
+
+- 下单后 N 分钟未付款 → 自动关单、释放库存
+- 促销活动 → 定时开始 / 结束曝光加权
+- TCC 预留超时 → 精确到**单条预留**的自动释放
+
+直觉上这是 cron 的活。但 cron 的模型是"每分钟扫一次全表，把到期的挑出来"——它假设大家**共享同一个时钟节拍**。而这里 100 个订单有 100 个**各自独立**的到期时刻 T₁、T₂、T₃……，用扫表去逼近，只有两个坏结局：扫得太频繁（浪费），或精度不够（库存被多占）。
+
+真正的需求是：**给每一条业务实例，挂一个属于它自己的、精确的闹钟。** 这一句话，就决定了后面所有的技术选型。
+
+---
+
+## 2. 心法一：面对任何 agent 命令，先做"责任分层"
+
+这是这篇最想让你带走的东西，而且它**不止用于延迟命令**。
+
+每次你犹豫"这个能不能交给 agent"，别笼统地纠结"信不信任 AI"，而是把这件事**拆成三个独立问题**分别回答：
+
+1. **意图**——决定"做不做、怎么做"，需要业务上下文吗？需要 → 这层适合 agent。
+2. **触发可靠性**——这件事"一定会发生"由谁保证？只要答案里出现"如果 agent 还在""如果进程没挂"，这层就**必须**从 agent 手里拿走，交给基础设施。
+3. **执行合法性**——动手那一刻，状态可能已经变了。谁来做最后一道校验？永远是领域。
+
+把延迟关单套进去：意图（5 分钟后关）可以是 agent 的判断；但"5 分钟一定到"得靠定时消息+兜底，"关的时候这单是不是已经付款了"得靠订单状态机。**三层分别由 agent / 系统 / 领域负责，互不越界。**
+
+回看前两篇你会发现这是同一套框架的延伸：第一篇 agent 提议"做什么"、聚合裁决合法性；第二篇并发与分布式下、TCC + 那道墙仍然裁决；这一篇只是把"做什么"换成了"什么时候做"。**变的是命令的维度，不变的是责任的边界。**
+
+---
+
+## 3. 心法二：精度要匹配需求，别无脑上最高规格
+
+确定了"每条实例一个精确闹钟"，下一步选实现。RocketMQ 给了两种延迟能力，它们的差别不是优劣，是**适用场景**：
+
+| | 4.x delayLevel | 5.x 精确投递 |
 |---|---|---|
-| 精度 | 18 个固定档位（1s/5s/.../2h） | 任意毫秒 |
-| 协议 | remoting（老 starter） | gRPC（新 client） |
+| 精度 | 18 个固定档位（1s / 5s / … / 2h） | 任意毫秒 |
+| 协议 | remoting | gRPC |
 | 适合 | "大约 5 分钟后" | "精确到这一单的超时时刻" |
 
-我们两个都用——**不同场景不同精度**：
+我两种都用——这恰恰是心法二的体现：
 
-- `schedule_close_order`（agent 手动下发）→ 4.x delayLevel（"大约 5 分钟后关单"，够用）
-- `StockReservationTimeoutGuard`（每条预留自动挂的超时兜底）→ 5.x 精确投递（`now + 10min` 精确到毫秒）
+- agent 主动下发的"5 分钟后关单"，走**固定档位**。它不需要精确到 4min59s870ms，固定档够用、还省去维护新 client 的成本。
+- 每条预留自动挂的超时释放，走**精确投递**（`setDeliveryTimestamp` 指定绝对时刻）。因为预留的超时窗口可能是 7.5 分钟这种非标准值，用固定档只能贴 5min 或 10min——**而这个偏差会直接变成库存被错误占用或提前释放**。这里精度不是奢侈品，是正确性。
 
-这不是技术洁癖——是业务需求决定的：agent 说"5 分钟后关单"不需要精确到 4min59s870ms；但"预留超时释放"如果用 delayLevel 只能选 5min 或 10min 档，而真实超时窗口可能是 7.5min。
+**反过来说也成立：给"大约 5 分钟"的场景上毫秒精度，是在为不存在的需求付维护成本。** 精度过剩和精度不足，都是设计缺陷。
 
-## 3. 架构：outbox 分流 + 双协议共存
-
-```
-tryReserve 成功
-  ├── outbox: StockReserved        → OutboxRelay → Kafka（下游解耦）
-  └── outbox: TimeoutGuard         → OutboxRelay → RocketMQ 5.x（精确定时）
-                                                    ↓
-                                              10min 后投递
-                                                    ↓
-                                        ReservationTimeoutConsumer
-                                                    ↓
-                                        inventoryTccService.cancel(txKey)
-                                                    ↓
-                                        幂等：state≠TRIED → return（已确认/已取消）
-```
-
-关键设计：**同一个 outbox + 同一个 relay，按 eventType 分流到不同的消息中间件**。不是两套 outbox，是一套出口、两条管道。
-
-## 4. 代码：四个改造点
-
-### 4.1 Try 阶段多写一条超时兜底（同事务原子）
-
-```java
-@Transactional(propagation = Propagation.REQUIRES_NEW)
-public CommandResult tryReserve(String txKey, String sku, int qty) {
-    // ... reserve + 台账 + StockReserved（已有）
-
-    // 新增：超时兜底，精确到这一条预留的超时时刻
-    long deliverTimeMillis = Instant.now().plusMinutes(10).toEpochMilli();
-    outboxWriter.write("Inventory", sku, "StockReservationTimeoutGuard",
-            Map.of("txKey", txKey, "sku", sku, "qty", qty,
-                   "deliverTimeMillis", deliverTimeMillis));
-
-    return CommandResult.ok();
-}
-```
-
-跟 `StockReserved` 在**同一个事务**里——要么都写进去，要么都不写。这是 outbox 模式的核心保证：业务落地和发消息意图的原子性。
-
-### 4.2 OutboxRelay 按 eventType 分流
-
-```java
-@Scheduled(fixedDelay = 1000)
-public void relay() {
-    List<OutboxDO> batch = outboxMapper.findUnpublished(BATCH_SIZE);
-    for (OutboxDO row : batch) {
-        try {
-            if ("StockReservationTimeoutGuard".equals(row.getEventType())) {
-                relayToRocketMQ(row);       // 5.x gRPC 精确投递
-            } else {
-                relayToKafka(row);          // 普通领域事件
-            }
-            outboxMapper.markPublished(row.getId());
-        } catch (Exception e) {
-            log.warn("Relay failed id={}, will retry: {}", row.getId(), e.getMessage());
-            break;
-        }
-    }
-}
-
-private void relayToRocketMQ(OutboxDO row) throws Exception {
-    JsonNode payload = objectMapper.readTree(row.getPayload());
-    String txKey = payload.get("txKey").asText();
-    long deliverTimeMillis = payload.get("deliverTimeMillis").asLong();
-    rocketMQ5Producer.sendScheduled(txKey, row.getPayload(), deliverTimeMillis);
-}
-```
-
-### 4.3 RocketMQ 5.x Producer（精确投递）
-
-```java
-@Component
-@ConditionalOnProperty(prefix = "rocketmq", name = "name-server")
-public class RocketMQ5Producer {
-
-    private Producer producer;
-
-    @PostConstruct
-    public void init() throws Exception {
-        ClientServiceProvider provider = ClientServiceProvider.loadService();
-        ClientConfiguration config = ClientConfiguration.newBuilder()
-                .setEndpoints(endpoint)
-                .build();
-        producer = provider.newProducerBuilder()
-                .setClientConfiguration(config)
-                .setTopics("reservation-timeout-guard")
-                .build();
-    }
-
-    public void sendScheduled(String key, String payload, long deliverTimeMillis) {
-        Message message = provider.newMessageBuilder()
-                .setTopic("reservation-timeout-guard")
-                .setKeys(key)
-                .setBody(payload.getBytes())
-                .setDeliveryTimestamp(deliverTimeMillis)   // ← 精确到毫秒
-                .build();
-        producer.send(message);
-    }
-}
-```
-
-**`setDeliveryTimestamp`** —— 这是 5.x 独有的 API。不是"delay 5 分钟"，是"在 2026-06-10T14:55:00.000Z 投递"。每条消息独立倒计时。
-
-### 4.4 消费端：精确时刻触发 cancel
-
-```java
-@Component
-@ConditionalOnProperty(prefix = "rocketmq", name = "name-server")
-public class ReservationTimeoutConsumer {
-
-    private PushConsumer consumer;
-
-    @PostConstruct
-    public void init() throws Exception {
-        consumer = provider.newPushConsumerBuilder()
-                .setConsumerGroup("reservation-timeout-consumer")
-                .setSubscriptionExpressions(Map.of("reservation-timeout-guard", FilterExpression.SUB_ALL))
-                .setMessageListener(this::onMessage)
-                .build();
-    }
-
-    private ConsumeResult onMessage(MessageView message) {
-        String body = StandardCharsets.UTF_8.decode(message.getBody()).toString();
-        JsonNode payload = objectMapper.readTree(body);
-        String txKey = payload.get("txKey").asText();
-
-        // 直接调用现有的幂等 cancel——三种情况都安全：
-        // 1. state=TRIED → 释放库存（正常超时回收）
-        // 2. state=CONFIRMED → no-op（已被正常确认）
-        // 3. state=CANCELLED → no-op（已被其他路径取消）
-        inventoryTccService.cancel(txKey);
-        return ConsumeResult.SUCCESS;
-    }
-}
-```
-
-注意：消费端**没有新的状态校验逻辑**——全部复用 `cancel(txKey)` 里已有的幂等判断。这就是上一篇里我们写的台账 + 状态幂等的价值：新来一个触发源（定时消息），零新增校验代码。
-
-## 5. 对比：粗粒度扫表 vs 精确定时消息
-
-之前的 `ReservationReaper`（全表扫描 + 30min 超时窗口）有两个问题：
-
-- **精度差**：预留 T 时刻创建，最早 T+30min 才被发现、最迟 T+31min（扫描间隔 60s）。中间 30 分钟库存被虚占。
-- **扩展差**：`findStaleTried(before)` 随预留量线性增长。
-
-RocketMQ 定时消息：
-
-- **精度高**：每条预留有自己的精确投递时刻（T+10min），broker 负责定时，不靠客户端扫描。
-- **扩展好**：消息量增长由 broker 水平扩展承担，客户端只消费到达的消息。
-
-但 **RocketMQ 不是银弹** —— broker 故障、消息丢失是可能的。所以 ReservationReaper 不删，**降级为灾备**：
-
-```java
-/**
- * Disaster-backup reaper: catches reservations that RocketMQ timeout guard missed.
- * Primary mechanism: per-reservation RocketMQ scheduled message.
- * This is the safety net when broker is down or messages are lost.
- */
-@Scheduled(fixedDelay = 300_000)   // 从 60s → 5min（不再是主力）
-public void reapStale() {
-    Instant before = Instant.now().minus(Duration.ofHours(1));   // 从 30min → 1h（灾备兜底）
-    // ...
-}
-```
-
-## 6. Agent 的延迟命令（另一条路径）
-
-除了超时兜底（被动），agent 还能主动下发延迟命令：
-
-```bash
-# agent 说"5 分钟后关单"
-curl -XPOST localhost:8081/mcp/call -H 'Content-Type: application/json' \
-  -d '{"tool":"schedule_close_order","params":{"order_id":"123","reason":"timeout","delay_minutes":5}}'
-```
-
-这条走的是 4.x delayLevel（`rocketmq-spring-boot-starter`），用固定档位够了。Go 控制面照常加幂等键 + 审计：
-
-```
-agent → Go (idempotency + rate limit + audit)
-     → Java POST /schedule/close-order
-     → RocketMQ 4.x delayed message (level 9 = 5min)
-     → consumer → Order.close()
-```
-
-两条路径、两种精度、两种协议——但**消费端的幂等逻辑完全复用**。
-
-## 7. 放弃了什么
-
-- **没用单一协议统一两种延迟**：可以全用 5.x，但 `schedule_close_order` 的 "大约 5 分钟" 场景用老 starter 更简单（不需要管理 5.x Producer 生命周期），且已经跑通了。两套共存的代价是两个 client 依赖，但各走各的、互不干扰。
-- **没用 @RocketMQTransactionListener 做事务消息**：outbox 已经保证了"业务落地 = 消息一定会发"。再加事务消息是重复保证，复杂度白涨。
-- **Reaper 没删**：代码多留一个定时任务。但它是最后一道安全网——系统的正确性不应该只依赖一个外部中间件的可用性。
-
-## 8. 要点
-
-| 场景 | 机制 | 精度 | 协议 |
-|------|------|------|------|
-| agent 主动延迟命令 | DelayedCommandProducer | 固定 18 档 | 4.x remoting |
-| 预留超时自动释放 | RocketMQ5Producer | 精确毫秒 | 5.x gRPC |
-| broker 故障兜底 | ReservationReaper | 1h 粗扫 | 无（本地定时） |
-
-三层不是冗余——它们的精度、触发方式、故障假设都不同：
-- 定时消息假设 broker 可用 → 主力
-- Reaper 假设 broker 可能挂 → 兜底
-- 两者都不假设对方存在 → 互相独立、幂等收敛
-
-## 9. 复现
-
-```bash
-git clone https://github.com/wheningo/orderDemo.git
-cd orderDemo
-
-# 1. RocketMQ（清华镜像，Java 21 需要去掉 UseBiasedLocking）
-wget https://dlcdn.apache.org/rocketmq/5.3.1/rocketmq-all-5.3.1-bin-release.zip
-unzip rocketmq-all-5.3.1-bin-release.zip
-cd rocketmq-all-5.3.1-bin-release
-# 修 bin/runbroker.sh：删除 -XX:-UseBiasedLocking
-sed -i 's/-XX:-UseBiasedLocking//' bin/runbroker.sh
-bin/mqnamesrv &
-sleep 5
-bin/mqbroker -n localhost:9876 --enable-proxy &
-
-# 2. Redis
-redis-server &
-
-# 3. Java
-cd business/hotrank-service
-mvn spring-boot:run \
-  -Dspring-boot.run.arguments="--spring.datasource.url=jdbc:h2:mem:hotrank;MODE=MySQL;DB_CLOSE_DELAY=-1 --spring.datasource.driver-class-name=org.h2.Driver --spring.sql.init.mode=always --spring.kafka.producer.properties.max.block.ms=1000 --seata.enabled=false"
-
-# 4. Go
-cd gateway && GOPROXY=https://goproxy.cn,direct HOTRANK_SERVICE_URL=http://localhost:8080 go run .
-
-# 5. 验证延迟关单
-# 先下单
-curl -XPOST localhost:8080/orders/place -H 'Content-Type: application/json' \
-  -d '{"productName":"Coffee","quantity":1,"sku":"SKU-1"}'
-# 记下 orderId，然后 schedule 关单
-curl -XPOST localhost:8081/mcp/call -H 'Content-Type: application/json' \
-  -d '{"tool":"schedule_close_order","params":{"order_id":"1","reason":"timeout","delay_minutes":1}}'
-# 等 1 分钟后查询
-sleep 65 && curl localhost:8080/orders/1
-# 期望：state = "CLOSED"
-```
+> 生产环境我用的是 RocketMQ 5.3.2，精确投递走 gRPC 协议。
 
 ---
 
-**下一篇预告**：风控层落地 —— 当 `riskTier` 不再只是透传字段，L3/L4 命令怎么强制走人工审批。
+## 4. 架构：一套 outbox，两条管道
+
+很多人接消息中间件的第一反应是"再建一套发送逻辑"。但这里有个更省的解：**复用已有的 outbox，按事件类型分流。**
+
+预留成功的那个本地事务里，本来就要写一条 `StockReserved` 事件进 outbox（前两篇的下游解耦用）。现在多写一条"超时兜底"事件即可——两条记录同一个事务，**"预留落库"和"挂上闹钟"天然原子**，要么都成、要么都不成，不需要任何额外的分布式保证。
+
+然后让 relay 在出口处按事件类型分叉：普通领域事件走 Kafka（下游解耦），超时兜底事件走 RocketMQ 精确定时。**不是两套 outbox，是一套出口、两条管道。** 这个设计的价值不在"少写代码"，而在"少一个需要维护原子性的地方"——你没有新增任何一处"可能不一致"的接缝。
+
+（架构全貌见开头那张图的下半部分；relay 分流、Producer、Consumer 的完整实现都在 GitHub，这里不展开。）
+
+---
+
+## 5. 心法三：触发源永远不可信——at-least-once + 领域幂等
+
+这是分布式系统里最该内化的一条，延迟消息只是它的一个具体场景。
+
+**任何外部触发——MQ、cron、agent、重试机制——都不可信。** 它可能迟到、可能重复、可能丢失、可能乱序。如果你的正确性依赖"它恰好触发一次"，那就是在沙子上盖楼。
+
+具体到超时守卫，闹钟到点投递的那条消息，落到消费端时只做一件事：**把"该不该真的取消"这个判断，甩给领域状态机。** 消费端自己不写任何状态校验。三种情况，状态机自己收敛：
+
+- 预留还是 `TRIED` → 真超时 → 释放库存
+- 预留已 `CONFIRMED` → 用户正常付款了 → 状态机直接 no-op
+- 预留已 `CANCELLED` → 别的路径取消过了 → no-op
+
+**一条迟到的取消消息，撞上一个已经付款确认的订单，被状态机挡回去——这就是第一篇那道"墙"，在时间维度上的复用。闹钟只负责叫醒，放不放库存，永远是领域说了算。**
+
+那 relay 重复投递怎么办（发送成功但标记完成前进程崩了，下一轮会再投一条）？**答案是：不用办。** 因为消费端幂等，重复投递就是 no-op；而万一消息真丢了，重投反而是保护。这就是 **at-least-once（至少投一次）+ 领域幂等（多投不坏事）= 不丢不错**。
+
+为什么不追求 exactly-once？可以做——事务消息、或本地消息表加对账。但这是一笔**负收益的买卖**：消费端既然已经幂等，"恰好一次"和"至少一次 + 幂等"在结果上完全等价，你付出的双倍复杂度换来的是零。**当两个方案结果等价时，选复杂度低的那个——这本身就是一种设计能力。**
+
+---
+
+## 6. 心法四：留一手，正确性不押注于单一中间件
+
+定时消息很好，但它有一个隐含前提：**broker 活着、消息没丢。** 这个前提在生产里不总成立。
+
+所以前两篇那个全表扫描的 `ReservationReaper`，我没有删，而是**降级成灾备**：扫描频率从每分钟拉到每 5 分钟，超时阈值从 30 分钟拉到 1 小时。它平时几乎扫不到东西（定时消息已经把活干完了），只在 broker 宕机、消息丢失这种极端情况下，作为最后一张安全网兜住漏网的预留。
+
+这里的心法是：**主力机制（快、精确、依赖外部 broker）和兜底机制（慢、可靠、纯本地）并存，两者互相不假设对方存在，各自幂等收敛到同一个正确结果。** 系统的正确性，不应该押注在任何单一外部组件的可用性上。
+
+诚实地在文章和代码里保留这条灾备，比假装"上了 MQ 就万无一失"更接近真实工程——也更经得起追问。
+
+---
+
+## 7. 一个踩出来的认知：配置必须有业务含义
+
+最后讲一个真实的坑，因为它纠正了我一个习惯。
+
+超时窗口我第一版写死了 10 分钟。代码能跑、测试全绿——因为测试都是秒级的。直到想清楚一个场景才后背发凉：**如果用户的付款时间是 30 分钟，这条 10 分钟的闹钟会在用户还在正常付款时就把库存释放掉，造成"用户付款成功、但库存已经没了"的超卖事故。** 这种 bug 不在测试里、只在某个付款慢的真实用户身上炸。
+
+修复不是把 10 改成 30，而是把它变成**对齐业务语义的可配置项**：超时窗口必须等于业务真实的支付窗口，部署时配置、写进 `application.yml`。
+
+---
+
+## 8. agent 主动延迟命令：意图层的真正落地
+
+前面讲的超时守卫是"被动"兜底。agent 真正获得"时间维度"能力，是它能**主动**下发延迟命令——比如通过工具调用说"这单 5 分钟后关"。这条命令经过 Go 控制面加幂等键、限流、审计，再落到 RocketMQ 固定档位投递，到点触发订单关闭。
+
+回到开头那张表：**agent 在这里行使的，恰恰只是"意图层"——它判断该不该延迟、延迟多久。** 而"5 分钟后这条命令一定会执行"是系统的责任，"执行时这单状态合不合法"是领域的责任。两条路径（主动命令 / 被动守卫）、两种精度、两种协议，但**最后那道裁决的墙是同一道**。
+
+---
+
+## 9. 我放弃了什么
+
+技术选型的诚实，在于讲清楚没做什么、为什么：
+
+- **没用单一协议统一两种延迟**——固定档场景用老协议更省心，两套共存的代价只是多一个依赖，各走各的互不干扰。
+- **没用事务消息**——outbox 已经保证"业务落地 = 消息一定会发"，再叠事务消息是重复保证，复杂度白涨。
+- **没删灾备 reaper**——多留一个定时任务，换一张"中间件挂了也不丢"的网，值。
+
+---
+
+## 收尾：贯穿三篇的一句话
+
+| 场景 | 机制 | 精度 | 故障假设 |
+|------|------|------|----------|
+| agent 主动延迟命令 | 固定档投递 | 18 档 | broker 可用 |
+| 预留超时自动释放 | 精确定时投递 | 毫秒 | broker 可用 → 主力 |
+| broker 故障兜底 | 本地扫表 | 1h 粗扫 | broker 可能挂 → 灾备 |
+
+三条不是冗余，精度、触发方式、故障假设各不相同，靠领域幂等收敛到同一个正确结果。
+
+**而贯穿三篇的脊柱始终没变：agent 可以提议——做什么、什么时候做——但能不能做、到点有没有人做、做的那一刻合不合法，是系统和那道领域的墙说了算。**
+
+完整可运行代码（含 RocketMQ 5.x Producer/Consumer、outbox 分流、灾备 reaper、一键复现脚本）都在 👉 **https://github.com/wheningo/orderDemo**
+
+---
+
+**下一篇预告**：风控层落地——当 `riskTier` 不再只是透传字段，L3 / L4 命令怎么强制走人工审批。
